# pastafarian

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux-deploy.yml  linux.yml
docs/: .gitignore  Makefile  figure1.dot  figure2.dot  main.tex
scripts/: .gitignore  install.sh
src/: CMakeLists.txt  codegen.cc  codegen.hh  fsm.cc  fsm.hh  graph.cc  graph.hh  parser.cc  parser.hh  source.cc  source.hh  util.cc  util.hh
tests/: CMakeLists.txt  test_codegen.cc  test_fsm.cc  test_graph.cc  test_parse.cc  util.hh
tests/vectors/: PassThrough.sv  case.json  const_driver.json  const_driver.sv  enum.json  enum.sv  fsm1.json  fsm2.json  fsm2.scala  fsm2.v  fsm3.json  fsm3.sv  fsm4.json  fsm4.v  fsm5.json  fsm5.sv  fsm6.json  fsm7.json  fsm7.sv  fsm8.json  fsm8.sv  genvar_blocks.json  genvar_blocks.sv  hierarchy.json  op.json  op.sv  packed_struct.json  packed_struct.sv  param.json  param.sv  reg.json
tools/: CMakeLists.txt  detector.cc
